[package]
name = "integrate"
version = "0.1.0"
authors = ["Dan F-M <foreman.mackey@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Integrating some orbits"
repository = "https://github.com/dfm/integrate"

[dependencies]

[features]
f32 = []
2d = []

[profile.release]
opt-level = 3
codegen-units = 1
debug = 2
